# tap-rs

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  Dockerfile  LICENSE-MIT  MACRO_FIXES_SUMMARY.md  MCP_AGENT_INSTRUCTIONS.md  README.md  SECURITY_AUDIT.md  TASKS.md  TEMPORARY_STORAGE_IMPLEMENTATION.md  docker-compose.yml  lessons.md  llms.txt  run-example-with-temp.sh  tap-messages.md  userguide.md
caip/: Cargo.toml
caip/src/: account_id.rs  validation.rs
caip/tests/: fuzz_tests.rs
tap-agent/: CLAUDE.md  Cargo.toml  PAYMENT_LINKS.md  README.md  llms.txt
tap-agent/benches/: agent_benchmark.rs
tap-agent/examples/: README.md  invoice_payment_flow.rs  key_labels_demo.rs  key_management.rs  multi_agent_flow.rs  payment_cancel_flow.rs  payment_flow.rs  payment_link_flow.rs  secure_transfer_flow.rs  simple_payment_link.rs  transfer_flow.rs  unpack_tap_message.rs
tap-agent/src/: agent.rs  agent_key.rs  agent_key_manager.rs  cli.rs  config.rs  crypto.rs  debug_secrets.rs  did.rs  error.rs  key_manager.rs  key_store.rs  lib.rs  local_agent_key.rs  message.rs  message_packing.rs  oob.rs  payment_link.rs  policy.rs  secret_helper.rs  storage.rs  test_utils.rs  verification.rs
tap-agent/src/crypto/: kdf.rs  key_wrap.rs  mod.rs
tap-agent/src/examples/: mod.rs
tap-agent/tests/: agent_key_manager_tests.rs  agent_key_tests.rs  agent_tests.rs  crypto_tests.rs  did_bounds_tests.rs  ecdh_test.rs  encryption_tests.rs  ephemeral_agent_tests.rs  key_manager_tests.rs  key_signing_tests.rs  label_functionality.rs  message_packing_tests.rs  modern_agent_tests.rs  new_agent_trait_tests.rs  security_integration_tests.rs  simple_payment_link_tests.rs  simplified_agent_key_tests.rs  test_vectors_validation.rs
tap-caip/: CLAUDE.md  Cargo.toml  README.md  llms.txt
tap-caip/benches/: caip_benchmark.rs
tap-caip/src/: asset_id.rs  chain_id.rs  error.rs  lib.rs
tap-caip/tests/: fuzz_tests.rs
tap-cli/: CLAUDE.md  Cargo.toml  README.md
tap-cli/src/: error.rs  lib.rs  main.rs  output.rs  tap_integration.rs
tap-cli/src/commands/: agent.rs  did.rs  (+9 more)
tap-cli/tests/: integration_tests.rs
tap-core/: Cargo.toml  LICENSE  README.md
tap-core/benches/: message_benchmark.rs
tap-core/fuzz/: Cargo.toml
tap-core/src/: error.rs  lib.rs  utils.rs
tap-core/tests/: caip_validation.rs  didcomm_tests.rs  message_tests.rs  round_trip_tests.rs
tap-http/: CLAUDE.md  Cargo.toml  README.md  llms.txt
tap-http/examples/: event_logger_demo.rs  http_event_logger_demo.rs
tap-http/src/: client.rs  config.rs  error.rs  event.rs  handler.rs  lib.rs  main.rs  server.rs
tap-http/tests/: event_logger_tests.rs  external_decision_test.rs  integration_tests.rs  mock_decision_exec.sh  per_agent_storage_integration_test.rs  server_tests.rs
tap-ivms101/: CLAUDE.md  Cargo.toml  README.md
tap-ivms101/examples/: complete_ivms_example.rs
tap-ivms101/src/: builder.rs  error.rs  lib.rs  message.rs  person.rs  types.rs  validation.rs
tap-ivms101/tests/: builder_tests.rs  ivms_serialization_tests.rs  name_hash_tests.rs  validation_tests.rs
tap-mcp/: CLAUDE.md  Cargo.toml  README.md  llms.txt
tap-mcp/examples/: debug_received_messages.sh  pii_hashing_demo.rs
tap-mcp/src/: error.rs  lib.rs  main.rs  resources.rs  tap_integration.rs
tap-mcp/tests/: enhanced_agent_tests.rs  integration_tests.rs  test_pii_hashing.rs
tap-msg/: CLAUDE.md  Cargo.toml  README.md  SUPPORTED_FORMATS.md  llms.txt
tap-msg-derive/: CLAUDE.md  Cargo.toml  README.md  llms.txt
tap-msg-derive/src/: lib.rs
tap-msg/benches/: message_benchmark.rs
tap-msg/examples/: derive_macro_demo.rs  enhanced_derive_demo.rs  policy_demo.rs  test_connect_serialize.rs  test_transaction_id_serialization.rs  trust_ping_demo.rs
tap-msg/fuzz/: Cargo.toml
tap-msg/src/: derive.rs  didcomm.rs  error.rs  lib.rs  settlement_address.rs  utils.rs
tap-msg/tests/: agent_extraction_tests.rs  authorizable_tests.rs  caip_validation.rs  connectable_tests.rs  didcomm_presentation_tests.rs  didcomm_tests.rs  errors.rs  escrow_tests.rs  fuzz_tests.rs  internal_policy_tests.rs  invoice_product_tests.rs  invoice_tests.rs  lock_tests.rs  memo_hash_tests.rs  message_tests.rs  new_messages_tests.rs  payment_tests.rs  policy_tests.rs  presentation_test_vectors.rs  rfq_tests.rs  round_trip_tests.rs  settlement_address_bounds_tests.rs  tap_integration_tests.rs  test_vectors.rs  thread_tests.rs  update_party_tests.rs
tap-node/: CLAUDE.md  CUSTOMER-MANAGEMENT.md  Cargo.toml  EVENT-HANDLERS.md  README.md  STORAGE.md  TRAVEL-RULE.md  llms.txt
tap-node/benches/: stress_test.rs
tap-node/examples/: delivery_tracking_demo.rs  event_logger_demo.rs  http_message_flow.rs  travel_rule_flow.rs  websocket_message_flow.rs
tap-node/migrations/: 0001_create_transactions.sql  0002_create_messages.sql  001_create_transactions.sql  002_create_messages.sql  003_create_transaction_agents.sql  004_update_messages_table.sql  005_create_deliveries.sql  006_create_received.sql  007_create_customers.sql  008_create_decision_log.sql
tap-node/src/: customer.rs  error.rs  lib.rs
tap-node/tests/: customer_extraction_test.rs  customer_name_hash_tests.rs  delivery_tracking_test.rs  didcomm_validation_test.rs  event_logger_tests.rs  internal_delivery_test.rs  message_routing_tests.rs  message_tests.rs  multi_agent_storage_test.rs  node_tests.rs  processor_tests.rs  received_table_test.rs  sender_tests.rs  state_machine_integration_tests.rs  storage_tests.rs  timestamp_format_test.rs  travel_rule_integration_test.rs  validation_tests.rs  websocket_tests.rs
tap-wasm/: CLAUDE.md  Cargo.toml  README.md  llms.txt
tap-wasm/benches/: wasm_binding_benchmark.rs
tap-wasm/examples/: README.md  browser-agent-example.html  browser-example.html  serve-example.sh
tap-wasm/src/: lib.rs  updated-lib.rs  util.rs  wasm_agent.rs
tap-wasm/tests/: async_operations_tests.rs  basic_tests.rs  message_operations_tests.rs  simple_pack_test.rs  type_conversion_tests.rs  utility_functions_tests.rs  wasm_agent_tests.rs  wasm_bindings_tests.rs
(+277 files in other folders)
