[workspace]
members = [
    "tap-msg",
    "tap-msg-derive",
    "tap-agent",
    "tap-caip",
    "tap-node",
    "tap-http",
    "tap-wasm",
    "tap-mcp", "tap-ivms101",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Pelle Braendgaard <pelle@notabene.id>"]
description = "Rust implementation of the Transaction Authorization Protocol (TAP)"
repository = "https://github.com/TransactionAuthorizationProtocol/tap-rs"
license = "MIT"
keywords = ["tap", "transaction", "authorization", "caip"]
categories = [
    "protocols",
    "web-programming",
    "cryptography",
    "api-bindings",
    "wasm",
]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime - minimal features for WASM compatibility
tokio = { version = "1.32.0", default-features = false, features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }

# Error handling
thiserror = "1.0"
anyhow = "1.0.75"

# UUID generation with WASM support
uuid = { version = "1.16.0", features = ["v4", "serde", "fast-rng", "js"] }

# Time handling with serde support
chrono = { version = "0.4", features = ["serde"] }

# URL handling
url = { version = "2.2" }

# Tracing
tracing = "0.1.37"

# WASM support
wasm-bindgen = { version = "0.2" }
js-sys = { version = "0.3" }
wasm-bindgen-futures = { version = "0.4" }
serde-wasm-bindgen = { version = "0.4" }
console_error_panic_hook = { version = "0.1" }
web-sys = { version = "0.3", features = [
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "Blob",
] }
getrandom = { version = "0.2", features = ["js"] }

# Cryptography and encoding
base64 = "0.21"
multibase = "0.9"

# Testing
tokio-test = "0.4.3"
assert_matches = "1.5.0"
wasm-bindgen-test = "0.3"

# Async traits
async-trait = "0.1"

# Common profile settings for all crates in the workspace
[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1
