[package]
name = "caip"
version = "0.1.0"
edition = "2021"
description = "Chain Agnostic Identifier Standard Implementation"
authors = ["Notabene"]
license = "MIT"
repository = "https://github.com/notabene-id/tap-rs"
readme = "README.md"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Regex for validation
regex = "1.9"
once_cell = "1.18"
hex = "0.4.3"

[dev-dependencies]
# Testing
tokio = { version = "1.0", features = ["macros", "rt"] }
tokio-test = "0.4"

# Fuzzing
arbitrary = { version = "1.3", features = ["derive"] }
