[package]
name = "tap-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
tap-core = { path = "../tap-core" }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
url = { workspace = true, optional = true }
chrono = { workspace = true }
didcomm = "0.4"
anyhow = { workspace = true }
tracing = { workspace = true }
erased-serde = "0.3"
uuid = { workspace = true }
base64 = "0.21"
multibase = "0.9.1"

# WASM support
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
assert_matches = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[features]
default = ["native"]
native = ["tokio", "url"]
wasm = [
  "tap-core/wasm",
  "wasm-bindgen",
  "js-sys",
  "web-sys"
]
