[package]
name = "tap-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
tap-msg = { version = "0.2.0", path = "../tap-msg" }
tap-caip = { version = "0.2.0", path = "../tap-caip" }
async-trait = { workspace = true }
thiserror = "1.0"
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
url = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
erased-serde = "0.3"
uuid = { workspace = true }
base64 = "0.21"
multibase = "0.9.1"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
curve25519-dalek = { version = "4.1", features = ["digest"] }
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
bs58 = "0.5"
clap = { version = "4.4", features = ["derive"] }

# WASM support
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
getrandom = { workspace = true, features = ["js"], optional = true }
web-sys = { workspace = true, optional = true }
aes-gcm = "0.10.3"

[dev-dependencies]
tokio-test = { workspace = true }
assert_matches = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
criterion = "0.5"

[[bench]]
name = "agent_benchmark"
harness = false

[features]
default = ["native"]
native = []
wasm = [
    "tap-msg/wasm",
    "wasm-bindgen",
    "js-sys",
    "web-sys",
    "wasm-bindgen-futures",
    "getrandom",
    "uuid/js",
]
