[package]
name = "tap-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
tap-msg = { version = "0.5.0", path = "../tap-msg" }
tap-caip = { version = "0.5.0", path = "../tap-caip" }
async-trait = { workspace = true }
thiserror = "1.0"
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true, features = ["rt"] }
url = { workspace = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
multibase = "0.9.1"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.21.3"
dirs = "6.0"
tempfile = { version = "3.8", optional = true }

# Crypto backends (optional)
ed25519-dalek = { version = "2.2", features = ["rand_core"], optional = true }
curve25519-dalek = { version = "4.1", features = ["digest"], optional = true }
p256 = { version = "0.13", features = ["ecdh", "ecdsa"], optional = true }
k256 = { version = "0.13", features = ["ecdsa"], optional = true }
rand = { version = "0.8", optional = true }

# WASM support
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
getrandom = { workspace = true, features = ["js"], optional = true }
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
], optional = true }
aes-gcm = "0.10.3"
aes = "0.8"
aes-kw = "0.2"
sha2 = "0.10"

[dev-dependencies]
tokio-test = { workspace = true }
assert_matches = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
criterion = "0.6"
tempfile = "3.8"
serial_test = "3.0"
tracing-subscriber = "0.3"

[[bench]]
name = "agent_benchmark"
harness = false

[features]
default = ["native", "crypto-ed25519"]
native = ["reqwest"]
test-utils = ["tempfile"]
examples = ["tempfile"]
wasm = [
    "tap-msg/wasm",
    "wasm-bindgen",
    "js-sys",
    "web-sys",
    "wasm-bindgen-futures",
    "getrandom",
    "uuid/js",
    "crypto-ed25519",       # Ed25519 is the default for wasm builds
]

# Crypto features
crypto-ed25519 = ["dep:ed25519-dalek", "dep:curve25519-dalek", "dep:rand"]
crypto-p256 = ["dep:p256", "dep:rand"]
crypto-secp256k1 = ["dep:k256", "dep:rand"]
