[package]
name = "tap-caip"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Chain Agnostic Identifier Protocol Implementation"
readme = "README.md"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Regex for validation
regex = "1.9"
once_cell = "1.21.3"
hex = "0.4.3"

# WASM support
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }

[dev-dependencies]
# Testing
tokio = { workspace = true }
tokio-test = { workspace = true }
proptest = "1.7"
rstest = "0.25"
once_cell = "1.21.3"
criterion = "0.6"

[[bench]]
name = "caip_benchmark"
harness = false

# Fuzzing dependencies
[dev-dependencies.arbitrary]
version = "1.3"
features = ["derive"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "getrandom/js"]
