[package]
name = "tap-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command-line interface for TAP Agent operations"
repository.workspace = true
license.workspace = true
keywords = ["cli", "tap", "blockchain", "transactions", "didcomm"]
categories = ["command-line-utilities"]

[[bin]]
name = "tap-cli"
path = "src/main.rs"

[lib]
name = "tap_cli"
path = "src/lib.rs"

[dependencies]
# TAP ecosystem dependencies
tap-node = { version = "0.5.0", path = "../tap-node" }
tap-agent = { version = "0.5.0", path = "../tap-agent" }
tap-msg = { version = "0.5.0", path = "../tap-msg" }
tap-caip = { version = "0.5.0", path = "../tap-caip" }

# Async runtime and I/O
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Async traits
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Directory utilities
dirs = "6.0"

# Database access
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
serial_test = "3.0"
assert_matches = "1.5"
