[package]
name = "tap-core"
version = "0.1.0"
edition = "2021"
description = "Core message processing library for the Transaction Authorization Protocol"
authors = ["Notabene"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/notabene-id/tap-rs"
readme = "../README.md"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DIDComm
didcomm = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# UUID generation
uuid = { version = "1.4", features = ["v4", "serde"] }

# WASM support (optional)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
once_cell = "1.8"

[features]
default = []
wasm = []
