[package]
name = "tap-http"
version = "0.1.0"
edition = "2021"
description = "HTTP server for the Transaction Authorization Protocol (TAP)"
license = "MIT"

[dependencies]
tap-core = { path = "../tap-core" }
tap-node = { path = "../tap-node" }
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
bytes = "1.0"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
mockito = "1.0"

[[bin]]
name = "tap-http"
path = "src/main.rs"
