[package]
name = "tap-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "HTTP server for the Transaction Authorization Protocol (TAP)"
readme = "README.md"

[dependencies]
tap-msg = { version = "0.1.0", path = "../tap-msg" }
tap-node = { version = "0.1.0", path = "../tap-node" }
warp = "0.3"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
env_logger = "0.10"
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { workspace = true }
pico-args = "0.5"

[dev-dependencies]
mockito = "1.0"
tokio-test = { workspace = true }

[[bin]]
name = "tap-http"
path = "src/main.rs"
