[package]
name = "tap-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Model Context Protocol server for TAP Node functionality"
repository.workspace = true
license.workspace = true
keywords = ["mcp", "tap", "blockchain", "transactions", "ai"]
categories = ["api-bindings", "development-tools"]

[lib]
name = "tap_mcp"
path = "src/lib.rs"

[[bin]]
name = "tap-mcp"
path = "src/main.rs"

[dependencies]
# TAP ecosystem dependencies
tap-node = { path = "../tap-node" }
tap-agent = { path = "../tap-agent" }
tap-msg = { path = "../tap-msg" }
tap-caip = { path = "../tap-caip" }

# Async runtime and I/O
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Async channels
futures = "0.3"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Async traits
async-trait = "0.1"

# URL parsing
url = "2.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Directory utilities
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
test-log = "0.2"
tokio-test = "0.4"
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
assert_matches = "1.5"
