[package]
name = "tap-msg"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core message processing library for the Transaction Authorization Protocol"
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Chain Agnostic Identifiers
tap-caip = { path = "../tap-caip" }

# DIDComm
didcomm = { workspace = true }

# Time handling
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# UUID generation
uuid = { version = "1.3", features = ["v4"] }

# Tracing
tracing = { workspace = true }

# WASM support 
wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
once_cell = "1.8"
proptest = "1.2"
criterion = "0.5"

[[bench]]
name = "message_benchmark"
harness = false

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "getrandom/js", "console_error_panic_hook"]
examples = []
