[package]
name = "tap-msg"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core message processing library for the Transaction Authorization Protocol"
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Chain Agnostic Identifiers
tap-caip = { version = "0.3.0", path = "../tap-caip" }

# Date and time
chrono = { workspace = true }

# Random numbers for nonces
rand = "0.8.5"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = { workspace = true }

# UUID generation
uuid = { workspace = true }

# Tracing
tracing = { workspace = true }

# Derive macro for TAP messages
tap-msg-derive = { version = "0.3.0", path = "../tap-msg-derive" }

# WASM support
wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
getrandom = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
once_cell = "1.8"
proptest = "1.2"
criterion = "0.5"

[[bench]]
name = "message_benchmark"
harness = false

[features]
default = []
wasm = [
    "wasm-bindgen",
    "js-sys",
    "web-sys",
    "getrandom/js",
    "console_error_panic_hook",
]
examples = []
