[package]
name = "tap-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
tap-msg = { path = "../tap-msg" }
tap-agent = { path = "../tap-agent" }
tap-caip = { path = "../tap-caip" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# WASM-specific dependencies (optional)
wasm-bindgen = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
tracing = { workspace = true }
dashmap = "5.4" # Concurrent HashMap implementation
uuid = { workspace = true }
futures = "0.3"
sha2 = "0.10"
base58 = "0.2"
chrono = { workspace = true }
log = "0.4"
didcomm = "0.4"

# HTTP client for native
reqwest = { version = "0.11", features = ["json"], optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3"

[[bench]]
name = "stress_test"
harness = false

[features]
default = ["native"]
native = ["tokio/full", "reqwest"]
wasm = [
  "wasm-bindgen",
  "js-sys",
  "wasm-bindgen-futures",
  "console_error_panic_hook",
  "web-sys"
]
