[package]
name = "tap-ts-wasm"
version.workspace = true
edition.workspace = true
description = "WebAssembly bindings for TAP-TS"
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
console_error_panic_hook = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde-wasm-bindgen = { workspace = true }
tap-msg = { path = "../../../tap-msg", default-features = false, features = ["wasm"] }
tap-agent = { path = "../../../tap-agent", default-features = false, features = ["wasm"] }
# Exclude tap-node and tap-caip as they pull in dependencies that don't work in WASM
# tap-node = { path = "../../../tap-node" }
didcomm = { workspace = true, default-features = false }
uuid = { version = "1.5", features = ["v4", "js"] }
wee_alloc = { version = "0.4.5", optional = true }
getrandom = { workspace = true, features = ["js"] }

[dependencies.web-sys]
workspace = true
features = [
  "console",
  "Window",
  "Document",
  "HtmlElement",
  "Node",
  "Text",
  "Performance",
  "PerformanceTiming",
]

[features]
default = ["console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
